--- a/docs/devbook/jquery/4.md
+++ b/docs/devbook/jquery/4.md
@@ -53,7 +53,9 @@ jQuery( document ).ready(function( jq ) {
 Thay vì code `jQuery` ở cuối trang, hãy sử dụng `$(document).ready(function(){...})`, để chờ đến khi `DOM` tải xong rồi code `jQuery` mới được thực thi
 :::
 
-## 2. jQuery `2.2.3` và trước đó
+## 2. Các phiên bản jQuery
+
+### jQuery `1.8` và trước đó
 
 `jQuery` chỉ chạy khi tất cả cấu trúc `DOM` đều sẵn sàng
 
@@ -86,9 +88,7 @@ jQuery(function() {
 ```
 :::
 
-## 3. jQuery `3.0`
-
-### Ký hiệu
+### jQuery `3.0` về sau
 
 Ở `jQuery 3.0` đây là mẫu khuyết khích sử dụng: 
 
@@ -101,8 +101,6 @@ jQuery(function($) {
 ```
 
 > Tham khảo [document-ready handlers trong jQuery 3.0](https://jquery.com/upgrade-guide/3.0/#deprecated-document-ready-handlers-other-than-jquery-function)
-
-### Không đồng bộ
 
 Kể từ `jQuery 3.0` trở đi, `ready handler` sẽ luôn gọi là [không đồng độ](https://jquery.com/upgrade-guide/3.0/#breaking-change-document-ready-handlers-are-now-asynchronous). Ví như như code dưới đây
 
@@ -157,20 +155,18 @@ $(document).ready(function() {
 
 ## 5.
 
-`$(window).load()` was deprecated in jQuery version 1.8 (and completely removed from jQuery 3.0) and as
-such should not be used anymore. The reasons for the deprecation are noted on the [jQuery page about this event](http://api.jquery.com/load-event/)
+`$(window).load()` đã không được dùng từ bản `1.8` và hoàn toàn loại bỏ từ `jQuery 3.0`
 
-> Caveats of the load event when used with images
->
-> A common challenge developers attempt to solve using the .load() shortcut is to execute a function when an image (or collection of images) have completely loaded. There are several known caveats with this that should be noted. These are:
->
-> - It doesn't work consistently nor reliably cross-browser
-> 
-> - It doesn't fire correctly in WebKit if the image src is set to the same src as before
-> 
-> - It doesn't correctly bubble up the DOM tree
->
-> - Can cease to fire for images that already live in the browser's cache
+::: tip LÝ DO
+
+- Nó không hoạt động nhất quán với mọi trình duyệt
+
+- Không kích hoạt chính xác trong **WebKit** 
+
+- Không sử dụng cây DOM chính xác
+
+- Ngừng kích hoạt đối với hình ảnh đã nằm trong bộ nhớ trình duyệt
+:::
 
 If you still wish to use load() it is documented below:
 
@@ -181,10 +177,10 @@ event then the below can be used instead:
 
 ```js
 $(document).ready(function() {
-console.log($("#my_large_image").height()); // may be 0 because the image isn't available
+  console.log($("#my_large_image").height()); // may be 0 because the image isn't available
 });
 $(window).load(function() {
-console.log($("#my_large_image").height()); // will be correct
+  console.log($("#my_large_image").height()); // will be correct
 });
 ```
 
@@ -195,10 +191,10 @@ Sometimes the same behavior can be achieved by execution of code just before the
 
 ```html
 <body>
-<span id="greeting"></span> world!
-<script>
-$("#greeting").text("Hello");
-</script>
+  <span id="greeting"></span> world!
+  <script>
+    $("#greeting").text("Hello");
+  </script>
 </body>
 ```
 
