--- a/docs/devbook/bootstrap5/3.md
+++ b/docs/devbook/bootstrap5/3.md
@@ -57,4 +57,60 @@ Theo dõi đoạn code dưới đây:
 </div>
 ```
 
-## Reponsive Columns
+**Ví dụ 1**: Tạo một dòng (`<div class="row">`) sau đó thêm số lượng cột mong muốn `.col-*-*`
+
+  > Dấu `*` đầu tiên thể hiện `reponsive`: *sm*,*md*,*lg*,*xl*,*xxl*
+  > Dấu `*` thứ 2 đại diện cho một số tổng là `12` cột
+
+**Ví dụ 2**: Thay vì thêm số vào mỗi cột, hãy để `Bootstrap` tự xử lý layout (*nếu tạo `2` cột thì mỗi cột sẽ `50% width`, `3` cột thì `33.33% width`, `4` cột thì `25% width`*)
+
+  > Bạn cũng có thể sử dụng `.col-sm|md|lg|xl|xxl` để tạo cột `reponsive`
+
+### 3 cột bằng nhau
+
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2022/01/18-16-32-28-Screen%20Shot%202022-01-18%20at%2016.32.21.png">
+
+Ví dụ tạo `3` cột như trên với chiều rộng bằng nhau và tương thích mọi kích thước thiết bị code như sau:
+
+```html:no-line-numbers{2-4}
+<div class="row">
+  <div class="col">.col</div>
+  <div class="col">.col</div>
+  <div class="col">.col</div>
+</div>
+```
+
+### Cột `Responsive`
+
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2022/01/18-16-32-31-Screen%20Shot%202022-01-18%20at%2016.32.14.png">
+
+Ví dụ tạo `4` cột như trên có chiều rộng bằng nhau bắt đầu từ `tablets` và chia tỷ lệ tới `desktops`
+
+  > Trên thiết bị `mobile` hoặc màn hình `< 576px` các cột sẽ tự động xếp dọc
+
+```html:no-line-numbers
+<div class="row">
+  <div class="col-sm-3">.col-sm-3</div>
+  <div class="col-sm-3">.col-sm-3</div>
+  <div class="col-sm-3">.col-sm-3</div>
+  <div class="col-sm-3">.col-sm-3</div>
+</div>
+```
+
+::: warning ⚠️ LƯU Ý
+
+Lý do `col-sm-3` mà không phải là `4` hay `5` là vì tổng số của chúng là `12` đầy màn hình
+:::
+
+### 2 cột không bằng nhau `Reponsive`
+
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2022/01/19-14-42-00-Screen%20Shot%202022-01-19%20at%2014.41.51.png">
+
+Theo dõi ví dụ sau đây sẽ tạo 2 cột không bằng nhau bắt đầu từ `tablets` mở rộng ra tới `desktops`
+
+```html:no-line-numbers
+<div class="row">
+  <div class="col-sm-4">.col-sm-4</div>  
+  <div class="col-sm-8">.col-sm-8</div>
+</div>
+```
