--- a/docs/devbook/bootstrap5/4.md
+++ b/docs/devbook/bootstrap5/4.md
@@ -10,10 +10,9 @@ Ngoài ra, tất cả thẻ `p` có `margin-top: 0` và `margin-bottom: 1rem` (*
 
 ### `<h1>` - `<h6>`
 
-<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2022/01/19-14-50-30-Screen%20Shot%202022-01-19%20at%2014.50.17.png">
-
-
 Sử dụng `.h1` tới `.h6` để đặt các tiêu đề cho phần tử khác mà bạn muốn
+
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2022/01/19-14-50-30-Screen%20Shot%202022-01-19%20at%2014.50.17.png">
 
 ```html:no-line-numbers
 <p class="h1">h1 Bootstrap heading</p>
@@ -25,9 +24,9 @@ Sử dụng `.h1` tới `.h6` để đặt các tiêu đề cho phần tử khá
 ```
 ### Display headings
 
-<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2022/01/19-14-51-04-Screen%20Shot%202022-01-19%20at%2014.51.03.png">
-
 Sử dụng `.display-1` tới `.display-6` để nổi bật hơn các `heading` bình thường (*`font-size` lớn hơn và `font-weight` mỏng hơn*)
+
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2022/01/19-14-51-04-Screen%20Shot%202022-01-19%20at%2014.51.03.png">
 
 ```html:no-line-numbers
 <h1 class="display-1">Display 1</h1>
@@ -40,9 +39,9 @@ Sử dụng `.display-1` tới `.display-6` để nổi bật hơn các `heading
 
 ### `<small>`
 
-<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2022/01/19-14-51-14-Screen%20Shot%202022-01-19%20at%2014.51.12.png">
-
 Trong `Bootstrap 5` thẻ `<small>` (*hoặc `.small`*) sử dụng để tạo chữ nhỏ hơn một chút.
+
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2022/01/19-14-51-14-Screen%20Shot%202022-01-19%20at%2014.51.12.png">
 
 ```html:no-line-numbers
 <h1>h1 heading <small>secondary text</small></h1>
@@ -55,9 +54,9 @@ Trong `Bootstrap 5` thẻ `<small>` (*hoặc `.small`*) sử dụng để tạo 
 
 ### `<mark>`
 
+Trong `Bootstrap 5` thẻ `mark` (hoặc `.mark`) sẽ tạo chữ với `background-color: yellow` ở phần `padding` để đánh dấu quan trọng
+
 <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2022/01/19-14-51-27-Screen%20Shot%202022-01-19%20at%2014.51.25.png">
-
-
 
 
 ```html:no-line-numbers
@@ -65,6 +64,8 @@ Trong `Bootstrap 5` thẻ `<small>` (*hoặc `.small`*) sử dụng để tạo 
 ```
 
 ### `<abbr>`
+
+Trong `Bootstrap 5` thẻ `<abbr>`, sẽ tạo chữ với `border-style: dotted` và khi di chuyện vào sẽ hiện phần `title`
 
 <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2022/01/19-15-21-19-Screen%20Shot%202022-01-19%20at%2015.21.15.png">
 
@@ -74,6 +75,8 @@ Trong `Bootstrap 5` thẻ `<small>` (*hoặc `.small`*) sử dụng để tạo 
 ```
 
 ### `<blockquote>`
+
+Thêm `.blockquote` vào thẻ `<blockquote>` khi muốn trích dẫn nội dung từ nguồn khác như *`form WWF's website`* ở ví dụ bên dưới bằng cách sử dụng `blockquote-footer`
 
 <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2022/01/19-15-21-32-Screen%20Shot%202022-01-19%20at%2015.21.31.png">
 
@@ -128,3 +131,14 @@ line breaks.
 ```
 
 ## Một số `Typography Classes`
+
+| Class                                                           | Mô tả                                                                                  |
+| --------------------------------------------------------------- | -------------------------------------------------------------------------------------- |
+| `.lead`                                                         | làm nổi bật văn bản                                                                    |
+| `.text-left`<br>`.text-end`<br>`.text-center`<br>`.text-nowrap` | căn trái văn bản<br>căn phải văn bản<br>căn giữa văn bản<br>văn bản không được bao bọc |
+| `.text-break`                                                   | tự ngắt dòng khi văn bản dài                                                           |
+| `.text-decoration-none`                                         | xóa dấu gạch dưới của `link`                                                           |
+| `.text-lowercase`<br>`.text-uppercase`<br>`.text-capitalize`    | văn bản chữ thường<br>văn bản chữ IN HOA<br>văn bản viết HOA chữ cái đầu               |
+| `.initialism`                                                   | hiển thị văn bản title trong thẻ `<abbr>` nhỏ hơn một chút                             |
+| `.list-unstyled`                                                | xóa định dạng mặc định của mục trong danh sách<br>(*hoạt động cả* `<ul>` và `<ol>`)    |
+| `.list-inline`                                                  | Đặt tất cả mục danh sách trên 1 dòng ngang                                             |
