--- a/docs/devbook/bootstrap5/1.md
+++ b/docs/devbook/bootstrap5/1.md
@@ -14,7 +14,7 @@
 Tuy nhiên `Bootstrap` không được hỗ trợ trình duyệt `IE 11` trở xuống 
 :::
 
-## 1. Bootstrap là gì 
+## Bootstrap là gì ?  
 
 - Là một Framework miễn phí cho Frontend, sử dụng nhanh và dễ dàng trong việc thiết kế website
 
@@ -27,7 +27,7 @@ Tuy nhiên `Bootstrap` không được hỗ trợ trình duyệt `IE 11` trở x
 Là một trang web có khả năng tự động điều chỉnh giao diện để hiển thị tốt nhất trên từng thiết bị như `Laptop`, `điện thoại`, `máy tính bảng`
 :::
 
-## 2. Tại sao sử dụng `Bootstrap`
+## Tại sao sử dụng `Bootstrap` ? 
 
 Các ưu điểm của `Bootstrap`
 
@@ -39,7 +39,7 @@ Các ưu điểm của `Bootstrap`
 
 - **Tương thích trình duyệt**: `Bootstrap 5` tương thích hầu hết các trình duyệt trừ `IE 11` trở xuống
 
-## 3. Sử dụng `Bootstrap 5`
+## Sử dụng `Bootstrap 5`
 
 Có 2 cách sử dụng: 
 
