--- a/docs/devbook/bootstrap5/5.md
+++ b/docs/devbook/bootstrap5/5.md
@@ -1,1 +1,26 @@
 # Bài 5: Colors
+
+## Text Color
+
+Các `class` cho màu chữ: `.text-muted`, `.text-primary`, `.text.sucess`, `.text-info`, `.text-warning`, `.text-danger`, `.text-secondary`, `.text-white`, `.text-dark`, `.text-body`, `.text-light`
+
+::: tip 💡 GHI NHỚ
+  Mặc định chữ bình thường sử dụng `.text-body`
+:::
+
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2022/01/20-15-10-19-Screen%20Shot%202022-01-20%20at%2015.10.11.png" width="350">
+
+Bạn có thể thêm độ mờ cho chữ `50%` bằng cách sử dụng `.text-black-50` *hoặc* `.text-white-50`:
+
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2022/01/20-15-14-10-Screen%20Shot%202022-01-20%20at%2015.14.03.png">
+
+## Background Color
+
+Các `class` cho màu nền: `.bg-primary`, `.bg-secondary`, `.bg-success`, `.bg-danger`, `.bg-warning`, `.bg-info`, `.bg-light`, `.bg-dark`, `.bg-white`, `.bg-black`, `.bg-transparent`
+
+::: warning ⚠️ LƯU Ý
+
+Màu nền không thiết lập được màu văn bản, vì vậy trong một số trường hợp bạn sẽ sử dụng chúng với `.text-*`
+:::
+
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2022/01/20-15-15-55-Screen%20Shot%202022-01-20%20at%2015.15.49.png">
