--- a/docs/devbook/bootstrap5/6.md
+++ b/docs/devbook/bootstrap5/6.md
@@ -2,21 +2,102 @@
 
 ## Basic Table
 
+Bảng cơ bảng trong `Bootstrap 5` có `padding` nhẹ và dải phân cách ngang bằng cách thêm `.table`
+
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2022/01/20-16-22-59-Screen%20Shot%202022-01-20%20at%2016.22.52.png" width="650">
+
+```html:no-line-numbers
+<table class="table">
+    <thead>
+      <tr>
+        <th>Firstname</th>
+        <th>Lastname</th>
+        <th>Email</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>John</td>
+        <td>Doe</td>
+        <td>john@example.com</td>
+      </tr>
+      <tr>
+        <td>Mary</td>
+        <td>Moe</td>
+        <td>mary@example.com</td>
+      </tr>
+      <tr>
+        <td>July</td>
+        <td>Dooley</td>
+        <td>july@example.com</td>
+      </tr>
+    </tbody>
+  </table>
+```
+
 ## Striped Rows
+
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2022/01/20-16-23-06-Screen%20Shot%202022-01-20%20at%2016.23.04.png" width="650">
+
+```html
+
+```
 
 ## Bordered Table
 
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2022/01/20-16-23-21-Screen%20Shot%202022-01-20%20at%2016.23.19.png" width="650">
+
+```html
+
+```
+
 ## Hover Rows
+
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2022/01/20-16-23-33-Screen%20Shot%202022-01-20%20at%2016.23.31.png" width="650">
+
+```html
+
+```
 
 ## Black/Dark Table
 
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2022/01/20-16-24-52-Screen%20Shot%202022-01-20%20at%2016.24.51.png" width="650">
+
+```html
+
+```
+
 ## Dark Striped Table
+
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2022/01/20-16-24-41-Screen%20Shot%202022-01-20%20at%2016.24.39.png" width="650">
+
+```html
+
+```
 
 ## Hoverable Dark Table
 
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2022/01/20-16-24-29-Screen%20Shot%202022-01-20%20at%2016.24.28.png" width="650">
+
+```html
+
+```
+
 ## Borderless Table
 
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2022/01/20-16-28-51-Screen%20Shot%202022-01-20%20at%2016.28.43.png" width="650">
+
+```html
+
+```
+
 ## Contextual Classes
+
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2022/01/20-16-28-59-Screen%20Shot%202022-01-20%20at%2016.28.58.png" width="650">
+
+```html
+
+```
 
 ## Table Head Colors
 
