--- a/docs/devbook/bootstrap5/6.md
+++ b/docs/devbook/bootstrap5/6.md
@@ -6,33 +6,22 @@ Bảng cơ bảng trong `Bootstrap 5` có `padding` nhẹ và dải phân cách 
 
 <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2022/01/20-16-22-59-Screen%20Shot%202022-01-20%20at%2016.22.52.png" width="650">
 
-```html:no-line-numbers
+```html:no-line-numbers{1}
 <table class="table">
-    <thead>
-      <tr>
-        <th>Firstname</th>
-        <th>Lastname</th>
-        <th>Email</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>John</td>
-        <td>Doe</td>
-        <td>john@example.com</td>
-      </tr>
-      <tr>
-        <td>Mary</td>
-        <td>Moe</td>
-        <td>mary@example.com</td>
-      </tr>
-      <tr>
-        <td>July</td>
-        <td>Dooley</td>
-        <td>july@example.com</td>
-      </tr>
-    </tbody>
-  </table>
+  <thead>
+    <tr>
+      <th>Firstname</th>
+      ...
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>John</td>
+      ...
+    </tr>
+    .....
+  </tbody>
+</table>
 ```
 
 ## Striped Rows
@@ -45,18 +34,50 @@ Bảng cơ bảng trong `Bootstrap 5` có `padding` nhẹ và dải phân cách 
 
 ## Bordered Table
 
+Thêm `.table-striped` để tạo sọc vằn cho bảng
+
 <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2022/01/20-16-23-21-Screen%20Shot%202022-01-20%20at%2016.23.19.png" width="650">
 
-```html
-
+```html:no-line-numbers{1}
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <th>Firstname</th>
+      ...
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>John</td>
+      ...
+    </tr>
+    .....
+  </tbody>
+</table>
 ```
 
 ## Hover Rows
 
+Thêm `.table-bordered` để thêm đường viên trên tất cả mặt của ô
+
 <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2022/01/20-16-23-33-Screen%20Shot%202022-01-20%20at%2016.23.31.png" width="650">
 
-```html
-
+```html:no-line-numbers{1}
+<table class="table table-bordered">
+  <thead>
+    <tr>
+      <th>Firstname</th>
+      ...
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>John</td>
+      ...
+    </tr>
+    .....
+  </tbody>
+</table>
 ```
 
 ## Black/Dark Table
