--- a/docs/devbook/bootstrap5/6.md
+++ b/docs/devbook/bootstrap5/6.md
@@ -28,42 +28,105 @@ Bảng cơ bảng trong `Bootstrap 5` có `padding` nhẹ và dải phân cách 
 
 <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2022/01/20-16-23-06-Screen%20Shot%202022-01-20%20at%2016.23.04.png" width="650">
 
-```html
-
+```html:no-line-numbers{1}
+<table class="table table-striped">
+... {như trên}
+<table>
 ```
 
 ## Bordered Table
 
-Thêm `.table-striped` để tạo sọc vằn cho bảng
+Thêm `.table-bordered` để tạo sọc vằn cho bảng
 
 <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2022/01/20-16-23-21-Screen%20Shot%202022-01-20%20at%2016.23.19.png" width="650">
 
 ```html:no-line-numbers{1}
-<table class="table table-striped">
-  <thead>
-    <tr>
-      <th>Firstname</th>
-      ...
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>John</td>
-      ...
-    </tr>
-    .....
-  </tbody>
+<table class="table table-bordered">
+  ... {như trên}
 </table>
 ```
 
 ## Hover Rows
 
-Thêm `.table-bordered` để thêm đường viên trên tất cả mặt của ô
+Thêm `.table-hover` để thêm nền xám khi di chuột vào các bảng của hàng
 
 <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2022/01/20-16-23-33-Screen%20Shot%202022-01-20%20at%2016.23.31.png" width="650">
 
 ```html:no-line-numbers{1}
 <table class="table table-bordered">
+... {như trên}
+</table>
+```
+
+## Black/Dark Table
+
+Thêm `.table-dark` để thêm chế độ tối cho bảng
+
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2022/01/20-16-24-52-Screen%20Shot%202022-01-20%20at%2016.24.51.png" width="650">
+
+```html:no-line-numbers{1}
+<table class="table table-dark">
+  ... {như trên}
+</table>
+```
+
+## Dark Striped Table
+
+Bạn cũng có thể sử dụng cả 2 class là `.table-striped` và `.table-dark` để tạo sọc vằn chế độ tối cho bảng
+
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2022/01/20-16-24-41-Screen%20Shot%202022-01-20%20at%2016.24.39.png" width="650">
+
+```html:no-line-numbers{1}
+<table class="table table-striped table-dark">
+  ... {như trên}
+</table>
+```
+
+## Hoverable Dark Table
+
+Bạn có thể kết hợp `.table-hover` và `table-dark` để tạo nền xám khi chuột qua các hàng của bảng chế độ tối
+
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2022/01/20-16-24-29-Screen%20Shot%202022-01-20%20at%2016.24.28.png" width="650">
+
+```html:no-line-numbers{1}
+<table class="table table-hover table-dark">
+  ... {như trên}
+</table>
+```
+
+## Borderless Table
+
+Thêm `.table-borderless` để loại bỏ viền cho bảng
+
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2022/01/20-16-28-51-Screen%20Shot%202022-01-20%20at%2016.28.43.png" width="650">
+
+```html:no-line-numbers{1}
+<table class="table table-borderless">
+  ... {như trên}
+</table>
+```
+
+## Contextual Classes
+
+Bạn có thể sử dụng các class trong `Bootstrap 5` để tô màu cho các hàng trong bảng lần lượt như sau:
+
+| Class                | Mô tả                                                                                                                                                                                                                         |
+| -------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| **.table-primary**   | <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2022/01/26-16-27-27-Screenshot%202022-01-26%20162716.png" width="60" height="30"> : cho biết hành động **quan trọng** |
+| **.table-success**   | <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2022/01/26-16-29-22-2.png" width="60" height="30"> : cho biết hành động đã **thành công** hoặc **tính cực**                                      |
+| **.table-danger**    | <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2022/01/26-16-29-26-3.png" width="60" height="30"> : cho biết hành động **nguy hiểm** *hoặc* có khả năng **tiêu cực**                            |
+| **.table-info**      | <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2022/01/26-16-29-37-4.png" width="60" height="30"> : cho biết hành động **thông tin** *hoặc* **thay đổi trung tính**                             |
+| **.table-warning**   | <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2022/01/26-16-33-32-5.png" width="60" height="30"> : cho biết hành động **cần chú ý**                                                            |
+| **.table-active**    | <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2022/01/26-16-33-56-6.png" width="60" height="30"> : màu thay đổi khi di chuột vào ô của bảng                                                    |
+| **.table-secondary** | <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2022/01/26-16-34-03-7.png" width="60" height="30"> : cho biết hành động **ít quan trọng hơn**                                                    |
+| **.table-light**     | <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2022/01/26-16-34-16-8.png" width="60" height="30"> : màu bảng chế độ sáng                                                                        |
+| **.table-dark**      | <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2022/01/26-16-34-25-9.png" width="60" height="30"> : màu bảng chế độ tối                                                                         |
+
+
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2022/01/20-16-28-59-Screen%20Shot%202022-01-20%20at%2016.28.58.png" width="650">
+
+```html:no-line-numbers{1,9,13}
+<table class="table">
   <thead>
     <tr>
       <th>Firstname</th>
@@ -72,55 +135,33 @@ Thêm `.table-bordered` để thêm đường viên trên tất cả mặt của
   </thead>
   <tbody>
     <tr>
-      <td>John</td>
+      <td>Default</td>
+      ..
+    </tr>      
+    <tr class="table-primary">
+      <td>Primary</td>
       ...
     </tr>
-    .....
   </tbody>
 </table>
+<!-- Các clas màu còn lại cũng như vậy -->
 ```
 
-## Black/Dark Table
 
-<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2022/01/20-16-24-52-Screen%20Shot%202022-01-20%20at%2016.24.51.png" width="650">
+::: tip 💡 MẸO
 
-```html
+Bạn cũng có thể thay đổi màu của `header table` bằng cách sau:
 
+```html:no-line-numbers
+<table class="table">
+    <thead class="table-dark">
+  ....
 ```
 
-## Dark Striped Table
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2022/01/26-16-42-37-1.png">
 
-<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2022/01/20-16-24-41-Screen%20Shot%202022-01-20%20at%2016.24.39.png" width="650">
-
-```html
-
-```
-
-## Hoverable Dark Table
-
-<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2022/01/20-16-24-29-Screen%20Shot%202022-01-20%20at%2016.24.28.png" width="650">
-
-```html
-
-```
-
-## Borderless Table
-
-<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2022/01/20-16-28-51-Screen%20Shot%202022-01-20%20at%2016.28.43.png" width="650">
-
-```html
-
-```
-
-## Contextual Classes
-
-<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2022/01/20-16-28-59-Screen%20Shot%202022-01-20%20at%2016.28.58.png" width="650">
-
-```html
-
-```
-
-## Table Head Colors
+hoặc cũng có thể sử dụng các `class` khác để thay đổi màu của `header table`
+:::
 
 ## Small Table
 
