--- a/docs/devbook/linux/1.md
+++ b/docs/devbook/linux/1.md
@@ -4,7 +4,13 @@ Phần lớn các chức năng trong `GNU/Linux` đều được làm từ `Term
 
 > Trong đó `Bash` là một trong những trình dùng `Shell` được sử dụng nhiều nhất.
 
-## 1. Shortcuts 
+::: warning ⚠️ CHÚ Ý 
+
+Tất cả nội dung sau đây, đều dựa vào `Bash`, các loại `shell` sẽ có đôi chút khác biệt...
+
+:::
+
+## 1. Shortcuts
 
 ### Mở Terminal
 
@@ -12,62 +18,145 @@ Phần lớn các chức năng trong `GNU/Linux` đều được làm từ `Term
 
 ### Thao tác con trỏ
 
-| Shortcut             | Chức năng                                                                      |
-| -------------------- | ------------------------------------------------------------------------------ |
-| Ctrl + A<br>Ctrl + E | Di chuyển tới đầu dòng<br>Di chuyển tới cuối dòng                              |
-| Ctrl + XX            | Di chuyển từ vị trí đầu dòng tới hiện tại của con trỏ                          |
-| Alt + F<br>Alt + B   | Di chuyển con trỏ về trước 1 **từ** <br>Di chuyển con trỏ về sau 1 **từ**      |
-| Ctrl + F<br>Ctrl + B | Di chuyển con trỏ về trước 1 **ký tự**<br>Di chuyển con trỏ về sau 1 **ký tự** |
-
+| Shortcut             | Chức năng                                                                                                          |
+| -------------------- | ------------------------------------------------------------------------------------------------------------------ |
+| Ctrl + A<br>Ctrl + E | Di chuyển tới đầu dòng<br>Di chuyển tới cuối dòng                                                                  |
+| Ctrl + XX            | Di chuyển từ vị trí đầu dòng tới hiện tại của con trỏ                                                              |
+| Alt + F<br>Alt + B   | Di chuyển con trỏ về trước 1 **từ** <br>Di chuyển con trỏ về sau 1 **từ**<br><br>🤔Có thể sử dụng `Ctrl + qua lại` |
+| Ctrl + F<br>Ctrl + B | Di chuyển con trỏ về trước 1 **ký tự**<br>Di chuyển con trỏ về sau 1 **ký tự**<br><br>🤔 Có thể sử dụng `qua lại`  |
 
 ### Thao tác văn bản
 
-| Shortcut                        | Chức năng                                                                                                                                                                          |
-| ------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| Ctrl + U<br>Ctrl + K            | Cắt con trỏ hiện tại đến **đầu** dòng, thêm vào `clipboard`<br>Cắt con trỏ hiện tại đến **cuối** dòng, thêm vào `clipboard` |
-| Ctrl + W                        | Xoá từng chữ về trước, thêm chúng vào `clipboard`                                                                                                                                  |
-| Ctrl + Y                        | Dán lại những thứ đã cắt gần nhất                                                                                                                                                  |
-| Alt + T<br>Ctrl + T             | Đổi chỗ 2 **từ** trước con trỏ<br>Đổi chỗ 2 **ký tự** trước con trỏ                                                                                                                |
-| Alt + L<br> Alt + U <br>Alt + C | **viết thường** từ con trỏ đền cuối từ<br>**viết HOA** từ con trỏ đến cuối từ<br>**viết hoa chữ cái đầu** từ con trỏ đến cuồi từ                                                   |
-| Alt + D                         |                                                                                                                                                                                    |
-| Alt + .                         |                                                                                                                                                                                    |
-
+| Shortcut                       | Chức năng                                                                                                                        |
+| ------------------------------ | -------------------------------------------------------------------------------------------------------------------------------- |
+| Ctrl + U<br>Ctrl + K           | Cắt con trỏ hiện tại đến **đầu** dòng, thêm vào `clipboard`<br>Cắt con trỏ hiện tại đến **cuối** dòng, thêm vào `clipboard`      |
+| Ctrl + W                       | Xoá từng chữ về trước con trỏ                                                                                                    |
+| Ctrl + D                       | Xoá từng chữ về sau con trỏ                                                                                                      |
+| Ctrl + Y                       | Dán lại những thứ đã cắt gần nhất                                                                                                |
+| Alt + T<br>Ctrl + T            | Đổi chỗ 2 **từ** trước con trỏ<br>Đổi chỗ 2 **ký tự** trước con trỏ                                                              |
+| Alt + L<br>Alt + U <br>Alt + C | **Viết thường** từ con trỏ đền cuối từ<br>**Viết HOA** từ con trỏ đến cuối từ<br>**Viết hoa chữ cái đầu** từ con trỏ đến cuồi từ |
+| Alt + .                        | Hiển thị lại những lệnh đã dùng<br><br>🤔 Có thể sử dụng `lên xuống`                                                             |
 
 ### Truy cập lịch sử
 
-| Shortcut             | Chức năng                                                               |
-| -------------------- | ----------------------------------------------------------------------- |
-| Ctrl + R<br>Ctrl + G | Tìm kiếm thông qua các lệnh đã dùng trước đó<br>Thoát chế độ `tìm kiếm` |
-| Ctrl + J             |                                                                         |
-| Alt + R              |                                                                         |
-| Ctrl + P             |                                                                         |
-| Ctrl + N             |                                                                         |
-
+| Shortcut             | Chức năng                                                                                                            |
+| -------------------- | -------------------------------------------------------------------------------------------------------------------- |
+| Ctrl + R<br>Ctrl + G | Tìm kiếm thông qua các lệnh đã dùng trước đó<br>Thoát chế độ `tìm kiếm`                                              |
+| Ctrl + J             |                                                                                                                      |
+| Alt + R              |                                                                                                                      |
+| Ctrl + P<br>Ctrl + N | Hiển thị câu lệnh cuối cùng được thực thi<br>Hiển thị câu lệnh thực thi tiếp theo<br><br>🤔 Có thể sử dụng lên xuống |
 
 ### Điều khiển Terminal
 
-| Shortcut | Chức năng |
-| -------- | --------- |
-| Ctrl + L |           |
-| Ctrl + S |           |
-| Ctrl + Q |           |
-| Ctrl + C |           |
-| Ctrl + D |           |
-| Ctrl + Z |           |
-| Tab      |           |
-| Tab Tab  |           |
-
+| Shortcut             | Chức năng                                                                                                                      |
+| -------------------- | ------------------------------------------------------------------------------------------------------------------------------ |
+| Ctrl + L             | Dọn màn hình<br><br>🤔Có thể sử dụng lệnh `clear`                                                                              |
+| Ctrl + S<br>Ctrl + Q | Dừng màn hình (*hữu dụng trong việc hiển thị quá nhiều*)<br>Chạy lại màn hình sau khi `Ctrl + S`                               |
+| Ctrl + C             | Kết thúc tiến trình đang chạy                                                                                                  |
+| Ctrl + D             | Đăng xuất `shell` hiện tại                                                                                                     |
+| Ctrl + Z             | Tạm thời dừng tiến trình<br>⚠️ Dùng lệnh `bg` *hoặc* `fg` để chạy tiếp tiến trình<br>⚠️ Dùng lệnh `jobs` để xem tiến trình nền |
+| Tab<br>Tab Tab       | Tự động hoàn toàn các lệnh và đường dẫn file<br>Hiển thị tất cả những trường hợp có thể hoàn thành lệnh                        |
 
 ### Ký tự đặc biệt
 
-| Shortcut | Chức năng |
-| -------- | --------- |
-| Ctrl + H |           |
-| Ctrl + J |           |
-| Ctrl + M |           |
-| Ctrl + I |           |
-| Ctrl + G |           |
-| Ctrl + @ |           |
-| Esc      |           |
+| Shortcut             | Chức năng                      |
+| -------------------- | ------------------------------ |
+| Ctrl + H             | Khoảng trắng (như nút `space`) |
+| Ctrl + J<br>Ctrl + M | Nút `Return`                   |
+| Ctrl + I             | Nút `Tab`                      |
+| Ctrl + G             | Nút `bell` (*quay lui*)        |
+| Ctrl + @             | Nút `Null`                     |
+| Esc                  |                                |
 
 ### Đóng Terminal
+
+- `Ctrl + Shift + W` : Đóng *tab* `terminal`
+
+- `Ctrl + Shift + Q` : Đóng ứng dụng `terminal`
+
+----
+
+::: tip 💡MẸO 
+
+Bạn có thể sử dụng bàn phím của `VIM` trong `Bash` bằng lệnh
+
+```shell:no-line-numbers
+set -o vi
+```
+
+:::
+
+## 2. Lệnh quản lí tập tin
+
+Linux có một số quy ước về thư mục hiện tại và thư mục cha, có thể gây nhẫm lẫn cho nhiều người mới
+
+Bất khi khi nào bận mở `terminal`, bạn ở đâu thì nó được gọi là `thư mục hiện tại`. Đôi khi `terminal` của bạn hiển thị đầy đủ đường dẫn nhưng cũng có trường hợp sẽ rút gọn lại, tham khảo như sau:
+
+```bash
+user@host ~/somedir $
+user@host somedir $
+user@host /home/user/somedir/ $ 
+```
+
+> 3 trường hợp trên đều nói rằng, bạn đang ở thư mục `/home/user/somedir`
+
+### Quy ước chung
+
+- Dấu `..` tượng trưng cho thư mục cha
+
+- Dấu `.` tượng trưng cho thư mục hiện tại
+
+> Vì thế nếu bạn đang ở `/home/user/somedir` và gõ `cd ..` => không có gì xảy ra
+
+### Đường dẫn thư mục
+
+| Lệnh        | Chức năng |
+| ----------- | --------- |
+| pwd         |           |
+| cd \-       |           |
+| cd \~<br>cd |           |
+| cd ..       |           |
+
+### Hiển thị tập tin
+
+| Lệnh                  | Chức năng |
+| --------------------- | --------- |
+| ls -l                 |           |
+| ls -l *ten\_thu\_muc* |           |
+| ls -a                 |           |
+| ls -F                 |           |
+| ls -lt                |           |
+| ls -lh                |           |
+| ls -lR                |           |
+| tree                  |           |
+
+### Tạo / sao chép / xoá
+
+| Lệnh                                     | Chức năng |
+| ---------------------------------------- | --------- |
+| cp -p ***nguồn*** *đích*                 |           |
+| cp -R ***nguồn_thư_mục*** *đích_thư_mục* |           |
+| mv *file1* *file2*                       |           |
+|                                          |           |
+|                                          |           |
+|                                          |           |
+
+### Quyền và nhóm
+
+| Lệnh | Chức năng |
+| ---- | --------- |
+|      |           |
+|      |           |
+|      |           |
+
+
+
+## 3. In màn hình
+
+## 4. Tiện ích Linux
+
+## 5. Tìm kiếm tập tin
+
+## 6. Thao tác tập tin
+
+## 7. Cụ thể tập tin / thư mục
